refactor: 채팅 메시지 서비스 MSA 구조로 전면 리팩토링
기존 모놀리식 구조의 ChatService를 MSA(마이크로서비스 아키텍처) 원칙에 따라 대대적으로 리팩토링합니다. 이를 통해 채팅 기능의 확장성, 성능, 유지보수성을 향상시키고 다른 서비스와의 결합도를 낮춥니다.

## 주요 변경 사항

### 1. 아키텍처 분리 및 API 통신
- **서비스 분리**: 기존 `ChatService`의 책임을 `ChatMessageService`, `ChatRoomService` 등으로 분리하고, `Main Service`와 `Chat Service`의 경계를 명확히 했습니다.
- **API 기반 통신**: `User`, `Image` 정보 조회를 위해 `userRepository` 직접 접근을 모두 제거하고, `UserClient(Feign)`를 통한 내부 API 호출 방식으로 변경했습니다.

### 2. 데이터베이스 이관 (Polyglot Persistence)
- **메시지 데이터 MongoDB 이전**: 빈번한 쓰기와 대용량 데이터에 적합한 `MongoDB`로 `ChatMessage` 데이터를 이관했습니다.
- **ID 타입 변경**: MongoDB `_id`에 맞춰 `ChatMessage`의 ID 타입을 `Long`에서 `String`으로 변경하고, 이를 참조하는 모든 로직(DTO, `ChatParticipant`의 `lastReadMessageId` 등)을 수정했습니다.

### 3. 성능 최적화
- **N+1 문제 해결**: 메시지 목록 조회 시 각 발신자 정보를 개별 API로 호출하던 로직을, 모든 `senderId`를 모아 Bulk API(`getUsersInfo`)로 **단 한 번만 호출**하도록 개선하여 네트워크 오버헤드를 최소화했습니다.
- **검색 로직 개선**: 번역이 필요한 메시지 검색 시, 채팅방의 모든 데이터를 메모리에 올리던 위험한 로직을 **최신 N개의 메시지만 조회**하여 검색하는 방식으로 변경하여 메모리 사용량을 안정화했습니다.

### 4. 엔티티 및 DTO 리팩토링
- **엔티티 의존성 제거**: `ChatParticipant`가 `User` 엔티티를 직접 참조하지 않고 `userId`만 갖도록 수정하여 서비스 간 결합도를 낮췄습니다.
- **DTO 역할 명확화**: DTO의 팩토리 메서드(`from`)가 `Repository`에 의존하던 로직을 모두 제거하고, 서비스 계층에서 조합된 순수 데이터 객체만 받도록 수정하여 책임을 명확히 했습니다.